AWS-Terraform/rds.tf
# PostgreSQL db for app

data "aws_secretsmanager_secret" "pg_taskdb_secret" {
  name = "pg_taskdb_secret"
}

data "aws_secretsmanager_secret_version" "pg_taskdb_version" {
  secret_id = data.aws_secretsmanager_secret.pg_taskdb_secret.id
}

locals {
  taskdb_password = data.aws_secretsmanager_secret_version.pg_taskdb_version.secret_string
}

resource "aws_db_instance" "pg-taskdb" {
  allocated_storage    = 5
  db_subnet_group_name = aws_subnet.private_subnet
  engine               = "postgres"
  engine_version       = "10"
  identifier           = "pg-taskdb"
  instance_class       = "db.t3.micro"
  password             = local.taskdb_password
  skip_final_snapshot  = true
  storage_encrypted    = true
  username             = "postgres"
}
